--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,9 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: black;
   font-family: Arial, Helvetica, sans-serif;
+
 }
 
 
@@ -38,6 +39,7 @@ nav{
   height: 5rem;
   padding-left: 3rem;
   padding-right: 3rem;
+  
 }
 
 nav ul{
